# training-app

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  entrypoint.sh  run.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/bot/: handlers.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/docker/: bot-entrypoint.sh  web-entrypoint.sh
backend/programs/: admin.py  admin_program_editor.py  auth_utils.py  authentication.py  models.py  program_clone.py  program_snapshot.py  serializers.py  urls.py  views.py
backend/programs/migrations/: 0001_initial.py  0002_onerepmax.py  0003_workout_completion.py  0004_dayexercise_superset_group.py  0005_accessoryweight.py  0006_add_sets_display_to_accessoryweight.py  0007_userprofile.py  0008_userprofile_telegram_photo_url.py  0009_alter_workoutcompletion_unique_together_and_more.py  0010_programsnapshot_commit_message.py  0011_program_catalog_and_metadata.py  0012_merge_duplicate_exercises.py  0013_program_specific_one_rep_max.py  0014_trainingcycle_programadaptation_and_more.py  0015_programadaptation_cancellation_fields.py  0016_program_owner_and_source.py
backend/tests/: test_admin_program_editor.py  test_api.py  test_auth_guard.py  test_bot.py  test_completion.py  test_display.py  test_one_rep_max.py  test_program_catalog.py  test_program_current.py  test_program_snapshots.py  test_session_auth.py  test_training_cycle.py
(+96 files in other folders)
